# trade_project_bot

./: .env  .gitignore  README.md  SWAPINFO.docx  UserInfoFunctions.py  UserTradeFunctions.py  alembic.ini  asda.py  asdasda.py  bot.py  broker.py  create_orders.py  dasdasdasd.py  database.py  db_shitcode.py  docker-compose.yaml  example.env  hueta.py  indicators.py  init-db.sh  install_ta-lib.sh  listner.py  m;dcvms;vm,ds.py  main.py  multiproc.py  pad.py  price-request.py  pyproject.toml  redis_test.py  requirements.txt  risk_managment.py  scriner.py  set_env.sh  sim.py  template.env  zalupa.py  ~$APINFO.docx
.ipynb_checkpoints/: main-checkpoint.py
Api/: OKXInfo.py  OKXInfoAsync.py  OKXTradeFunctions.py  OKXTradeFunctionsAsync.py  OKXTradeRequests.py  OKXTradeRequestsAsync.py  TradeRequests.py  TradeRequestsAsync.py  UserTradeFunctions.py
BaseLogs/: CustomDecorators.py
Broker/: broker.py
Cache/: AioLoadDataStream.py  AioRedisCache.py  LoadDataStream.py  RedisCache.py
Configs/: LoadSettings.py
Listner/: IventListner.py  IventListnerAsync.py
Logs/: CustomDecorators.py  CustomLogger.py
RiskManadgment/: HistVolatilityCalc.py  RiskManadgmentFunctions.py
Signals/: Signals.py  SignalsAsync.py
States/: States.py
User/: LoadSettings.py  Signals.py  TradeRequests.py  UserInfoFunctions.py  UserInfoFunctionsAsync.py  UserTradeFunctions.py  UserTradeFunctionsAsync.py  WebsocketsChannel.py
Utils/: CreateSSL.py  ssl_cert_mywebportal.loc.crt  ssl_key_mywebportal.loc.key
api/: okx_info_async.py  okx_trade.py  okx_trade_async.py  okx_trade_requests.py
baselogs/: custom_decorators.py  custom_logger.py
brokers/: async_broker.py
cache/: aioload_data_stream.py  aioredis_cache.py  load_data_stream.py  redis_cache.py
datasets/: AioRedisCache.py  AsyncStatesDB.py  ClassesCreation.py  DataBaseAsync.py  LoadData.py  LoadDataStream.py  RedisCache.py  StatesDB.py  TradeUserData.db  TradeUserDatasets.db  async_states_db.py  cache  database.py  database_async.py  find_path.py  tables.py
graphics/: IndicatorDrawer.py
indicators/: ADX.py  ALMA.py  AVSL.py  BollingerBands.py  IndicatorCalculator.py  IndicatorSignals.py  KAMA.py  MesaAdaptiveMovingAverage.py  RsiClouds.py  StochRSI.py  VWMA_based_ADX.py  ZigZagOrderBlockDection.py  adx_ind.py  (+8 more)
(+128 files in other folders)
